refactor: add exec maven plugin